# VUTFIT

./: .makefile.un~  README.md  makefile  seznam.txt  t9search.c
2BIT/IFJ/IFJ2023_Swift/: .gitignore  CMakeLists.txt  Makefile  is_it_ok.sh  rozsireni
2BIT/IFJ/IFJ2023_Swift/IO/: input.txt  output.txt
2BIT/IFJ/IFJ2023_Swift/src/: main.c
2BIT/IFJ/IFJ2023_Swift/src/codegen/: codegen.c  codegen.h
2BIT/IFJ/IFJ2023_Swift/src/codegen/AddressTable/: address_table.c  address_table.h
2BIT/IFJ/IFJ2023_Swift/src/codegen/inter_code/: inter_code.c  inter_code.h
2BIT/IFJ/IFJ2023_Swift/src/model/error/: error.c  error.h
2BIT/IFJ/IFJ2023_Swift/src/model/grammar/: grammar.c  grammar.h
2BIT/IFJ/IFJ2023_Swift/src/model/symtable/: symtable.c  symtable.h
2BIT/IFJ/IFJ2023_Swift/src/model/token/: token.c  token.h
2BIT/IFJ/IFJ2023_Swift/src/parser/: parser.c  parser.h
2BIT/IFJ/IFJ2023_Swift/src/parser/config/: config_parser.c  config_parser.h
2BIT/IFJ/IFJ2023_Swift/src/parser/ll_parser/: ll_parser.c  ll_parser.h
2BIT/IFJ/IFJ2023_Swift/src/parser/precedence_parser/: precedence_parser.c  precedence_parser.h
2BIT/IFJ/IFJ2023_Swift/src/parser/sem_analys/: sem_analys.c  sem_analys.h
2BIT/IFJ/IFJ2023_Swift/src/scanner/: scanner.c  scanner.h  scanner_configs.c
2BIT/IFJ/IFJ2023_Swift/src/scanner/configs/: conditions_configs.c  cycle_configs.c  general_type_configs.c  id_configs.c  ifj23_swift_configurator.h  logic_configs.c  math_operations_configs.c  special_symbols_configs.c  type_configs.c  unwraps_configs.c  utils_configs.c  value_configs.c
2BIT/IFJ/IFJ2023_Swift/src/structures/automata/: automata.c  automata.h
2BIT/IFJ/IFJ2023_Swift/src/structures/hashmap/: hashmap.c  hashmap.h
2BIT/IFJ/IFJ2023_Swift/src/structures/string/: string.c  string.h
2BIT/IFJ/IFJ2023_Swift/src/structures/vector/: vector.c  vector.h  vector_t.h
2BIT/IFJ/IFJ2023_Swift/src/test/automata_test/: automata_test.c  automata_test.h
2BIT/IFJ/IFJ2023_Swift/src/test/codegen_test/: codegen_test.c  codegen_test.h
2BIT/IFJ/IFJ2023_Swift/src/test/grammar_test/: grammar_test.c  grammar_test.h
2BIT/IFJ/IFJ2023_Swift/src/test/parser_test/: parser-test.c  parser-test.h
2BIT/IFJ/IFJ2023_Swift/src/test/scanner_test/: scanner-test.c  scanner_test.h
2BIT/IFJ/IFJ2023_Swift/src/utils/: logger.c  logger.h  util.c  util.h
2BIT/IZG/Project/: CMakeLists.txt  Doxyfile
2BIT/IZG/Project/doc/html/: annotated.html  classes.html  dir_df997ef5cbe81af8266600b381d65502.html  drawExample_8cpp.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  fwd_8hpp.html  fwd_8hpp_source.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  gpu_8cpp.html  gpu_8hpp.html  gpu_8hpp_source.html  index.html  menudata.js  pages.html  prepareModel_8cpp.html  prepareModel_8hpp.html  prepareModel_8hpp_source.html  structBindFramebufferCommand.html  structBindProgramCommand.html  structBindVertexArrayCommand.html  structBuffer.html  structClearCommand.html  structCommand.html  structCommandBuffer.html  structDrawCommand.html  structFramebuffer.html  structGPUMemory.html  structImage.html  structInFragment.html  structInVertex.html  structMesh.html  structModel.html  (+14 more)
2BIT/IZG/Project/doc/latex/: annotated.tex  drawExample_8cpp.tex  files.tex  fwd_8hpp.tex  gpu_8cpp.tex  gpu_8hpp.tex  index.tex  prepareModel_8cpp.tex  prepareModel_8hpp.tex  refman.tex  structBindFramebufferCommand.tex  structBindProgramCommand.tex  structBindVertexArrayCommand.tex  structBuffer.tex  structClearCommand.tex  structCommand.tex  structCommandBuffer.tex  structDrawCommand.tex  structFramebuffer.tex  structGPUMemory.tex  structImage.tex  structMesh.tex  structModel.tex  structOutFragment.tex  structProgram.tex  structSetDrawIdCommand.tex  structShaderInterface.tex  structSubCommand.tex  structTexture.tex  structVertexArray.tex  structVertexAttrib.tex  todo.tex  unionAttribute.tex  unionCommandData.tex  unionUniform.tex
2BIT/IZG/Project/examples/: angry.cpp  anime.cpp  czFlagMethod.cpp  edgeDetect.cpp  emptyMethod.cpp  modelMethod.cpp  modelMethod.hpp  phongMethod.cpp  rotatingTriangles.cpp  shadowMapping.cpp  shadowModel.cpp  shadowModel.hpp  skFlagMethod.cpp  stairs.cpp  texturedQuadMethod.cpp  triangle3DMethod.cpp  triangleBufferMethod.cpp  triangleClip1Method.cpp  triangleClip2Method.cpp  triangleMethod.cpp  video.cpp
2BIT/IZG/Project/framework/: application.cpp  application.hpp  arguments.cpp  arguments.hpp  colorPrinting.cpp  colorPrinting.hpp  main.cpp  method.hpp  model.cpp  programContext.cpp  programContext.hpp  systemSpecific.cpp  systemSpecific.hpp  textureData.cpp  textureData.hpp  window.hpp
2BIT/IZG/Project/resources/models/: references.txt
2BIT/IZG/Project/student/: documentation.dox  drawExample.cpp  fwd.cpp  fwd.hpp  gpu.cpp  gpu.hpp  prepareModel.cpp  prepareModel.hpp
2BIT/IZG/Project/tests/: commandBufferToStr.cpp  commandBufferToStr.hpp  conformanceTests.cpp  conformanceTests.hpp  createModel.cpp  createModel.hpp  drawModelTests.cpp  finalImageTest.cpp  fragmentShader.cpp  getExpectedPreparedModel.cpp  getExpectedPreparedModel.hpp  gpuMemToStr.cpp  gpuMemToStr.hpp  isMemDifferent.cpp  isMemDifferent.hpp  memDeepCopy.cpp  memDeepCopy.hpp  modelTestUtils.cpp  modelTestUtils.hpp  performanceTest.cpp  performanceTest.hpp  renderMethodFrame.cpp  renderMethodFrame.hpp  takeScreenShot.cpp  takeScreenShot.hpp  testCommon.cpp  testCommon.hpp  traverseModelTests.cpp  vertexShader.cpp
2BIT/IZG/Project/tests/commands/: bindFramebufferTests.cpp  bindProgramTests.cpp  bindVertexArrayTests.cpp  clear.cpp  commandTests.cpp  drawID.cpp  drawTests.cpp  framebufferTests.cpp  setDrawId.cpp  subCommandTests.cpp
2BIT/IZG/Project/tests/gpu/: barycentrics.cpp  clippingTests.cpp  common.cpp  common.hpp  discardTest.cpp  gl_FragCoord.cpp  gl_VertexID.cpp  perspectiveDivision.cpp  pfo.cpp  rasterization.cpp  vertexArrayTests.cpp  vs_interface.cpp  writeToFBO.cpp
2BIT/IZG/izg-lab-1/: CMakeLists.txt  README.md  base.cpp  base.h  main.cpp  student.cpp
IEL/: 00-projekt.tex  (+1 more)
(+1665 files in other folders)
